second commit:more files

--- a/dom.html
+++ b/dom.html
@@ -4,7 +4,7 @@
     <title>DOM-Training</title>
   </head>
   <body>
-    <h1>I love my Dog</h1>
+    <h1>DOM-Training</h1>
     <div id="cat"></div>
     <div class="mouse"></div>
     <div class="mouse"></div>
