--- a/index.html
+++ b/index.html
@@ -14,9 +14,19 @@
       <h1 id="title">Main title</h1>
       <ul id="item-list"></ul>
     </div>
-
+    <ul id="super-list">
+        <li>
+          First:
+          <ol>
+            <li>Sub-first 1</li>
+            <li>Sub-first 2</li>
+          </ol>
+        </li>
+        <li>Second</li>
+        <li>Third</li>
+      </ul>
     <button id="add-item-button">Add item</button>
-
     <script src="dom.js"></script>
   </body>
 </html>
+
